--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<title>一个简单易用 mock server, 为你提供可配置的接口和随机数据.</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+	
 </body>
 </html>
