--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>一个简单易用 mock server, 为你提供可配置的接口和随机数据.</title>
+	<title>Charles.yu‘s Home</title>
 </head>
 <body>
-	Hello World 2
+	Welcome Charles!
+	<a href="./demo/"></a>
 </body>
 </html>
